# Atlas

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: main.py  worker.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py  exceptions.py
apps/api/app/db/: bootstrap.py  models.py  session.py
apps/api/app/engine/: backtester.py  costs.py  indicators.py  metrics.py  optimizer.py  signal_engine.py  simulator.py
apps/api/tests/: test_api_jobs.py  test_backtester.py  test_operate_mode.py  test_paper_autopilot.py  test_paper_simulator_v19.py  test_research.py  test_signal_engine.py  test_simulator_v18.py  test_strategies.py  test_upstox_auth_helper.py  test_upstox_auto_renew_v33.py  test_upstox_renew_ops_v35.py  test_upstox_webhook_v34.py  test_v17_evaluations_replay_reports.py  test_v20_operate_guardrails.py  test_v21_shadow_scheduler.py  test_v22_trading_calendar.py  test_v23_data_updates.py  test_v24_risk_overlay_operate_run.py  test_v25_auto_evaluation.py  test_v26_fast_mode.py  test_v27_provider_updates.py  test_v28_mapping_backfill.py  test_v29_policy_ensembles.py  test_v30_regime_no_trade.py  test_v36_multi_provider_provenance.py  test_v37_confidence_gate.py  test_v38_confidence_risk_agg.py  test_v39_confidence_timeline_drilldown.py  test_v40_bhavcopy_backfill.py  test_v41_adjustments_membership_train_dataset.py
scripts/: dev.ps1  (+1 more)
(+117 files in other folders)
